--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,6 +55,11 @@
             android:textColor="@color/textWhite"
             android:background="@drawable/btn_main_login" />
 
+<!--        <Button-->
+<!--            android:id="@+id/btnGuardar"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Guardar palabra" />-->
 
     </LinearLayout>
 
