--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -17,27 +17,31 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="24dp">
+            android:layout_margin="24dp">
 
-            <!-- Cabecera -->
-            <LinearLayout
+            <!-- header -->
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_marginBottom="16dp">
+                android:layout_marginBottom="16dp"
+                android:paddingVertical="8dp">
 
+                <!-- Contenedor de puntos -->
                 <LinearLayout
+                    android:id="@+id/pointsContainer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_uno"
                     android:orientation="horizontal"
-                    android:padding="8dp">
+                    android:padding="8dp"
+                    android:gravity="center_vertical"
+                    android:layout_alignParentStart="true">
 
                     <ImageView
                         android:layout_width="16dp"
                         android:layout_height="16dp"
                         android:src="@drawable/ic_star"
-                        app:tint="@color/textWhite" />
+                        app:tint="@color/textWhite"/>
 
                     <TextView
                         android:id="@+id/txtPoints"
@@ -46,13 +50,10 @@
                         android:text="10"
                         android:textColor="@android:color/white"
                         android:layout_marginStart="4dp"
-                        android:textSize="14sp" />
+                        android:textSize="14sp"/>
                 </LinearLayout>
 
-                <View
-                    android:layout_width="230dp"
-                    android:layout_height="wrap_content"/>
-
+                <!-- Botón de cerrar sesión alineado a la derecha -->
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btnCerrarSesion"
                     android:layout_width="48dp"
@@ -62,10 +63,11 @@
                     android:drawableStart="@drawable/ic_logout"
                     android:drawableTint="@color/textWhite"
                     android:gravity="center"
-                    android:layout_marginRight="16dp"
-                    android:padding="12dp" />
+                    android:padding="12dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"/>
+            </RelativeLayout>
 
-            </LinearLayout>
 
             <!-- Título -->
             <LinearLayout
