--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -99,9 +99,94 @@
                     android:orientation="horizontal"
                     android:weightSum="3">
 
-                    <include layout="@layout/item_stat_card" />
-                    <include layout="@layout/item_stat_card" />
-                    <include layout="@layout/item_stat_card" />
+                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/bg_uno"
+                        android:gravity="center"
+                        android:orientation="vertical"
+                        android:layout_margin="5dp"
+                        android:padding="8dp">
+
+                        <TextView
+
+                            android:text="Partidas Ganadas"
+                            android:textSize="10sp"
+                            android:textColor="@color/textWhite"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
+                        <TextView
+                            android:id="@+id/txtGanadas"
+                            android:text="10"
+                            android:textSize="20sp"
+                            android:textStyle="bold"
+                            android:textColor="@color/textWhite"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
+
+                    </LinearLayout>
+                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/bg_uno"
+                        android:gravity="center"
+                        android:orientation="vertical"
+                        android:layout_margin="5dp"
+                        android:padding="8dp">
+
+                        <TextView
+
+                            android:text="Partidas Perdidas"
+                            android:textSize="10sp"
+                            android:textColor="@color/textWhite"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
+                        <TextView
+                            android:id="@+id/txtPerdidas"
+                            android:text="10"
+                            android:textSize="20sp"
+                            android:textStyle="bold"
+                            android:textColor="@color/textWhite"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
+
+                    </LinearLayout>
+                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/bg_uno"
+                        android:gravity="center"
+                        android:orientation="vertical"
+                        android:layout_margin="5dp"
+                        android:padding="8dp">
+
+                        <TextView
+
+                            android:text="Horas Jugadas"
+                            android:textSize="10sp"
+                            android:textColor="@color/textWhite"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
+                        <TextView
+                            android:text="10"
+                            android:id="@+id/txtHoras"
+                            android:textSize="20sp"
+                            android:textStyle="bold"
+                            android:textColor="@color/textWhite"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
+
+                    </LinearLayout>
+
                 </LinearLayout>
             </LinearLayout>
 
