--- a/app/src/main/res/layout/ranking_item.xml
+++ b/app/src/main/res/layout/ranking_item.xml
@@ -5,12 +5,13 @@
         android:id="@+id/itemRanking"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
+        android:padding="4dp"
         android:orientation="horizontal"
         android:layout_marginTop="6dp"
         android:weightSum="6"
         android:gravity="center_vertical">
 
+        <!-- Posición -->
         <TextView
             android:id="@+id/tvPosicion"
             android:layout_width="0dp"
@@ -19,28 +20,28 @@
             android:textColor="@android:color/white"
             android:background="@drawable/bg_ranking_item"
             android:layout_weight="0.5"
-            android:gravity="center" />
+            android:gravity="center"
+            android:textStyle="bold" />
 
+        <!-- Avatar + Nombre -->
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="30dp"
+            android:layout_height="40dp"
             android:layout_weight="2"
             android:orientation="horizontal"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:paddingTop="1dp"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
             android:background="@drawable/bg_ranking_item"
             android:gravity="center_vertical">
 
             <ImageView
                 android:id="@+id/imgAvatar"
-                android:layout_width="28dp"
-                android:layout_height="28dp"
-                android:layout_gravity="start"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
                 android:src="@drawable/avatar"
                 android:background="@drawable/bg_profile_border"
-                android:clipToOutline="true"
-                android:outlineProvider="background" />
+                android:scaleType="centerCrop"
+                android:clipToOutline="true" />
 
             <TextView
                 android:id="@+id/tvNombreJugador"
@@ -48,9 +49,13 @@
                 android:layout_height="wrap_content"
                 android:text="JugadorX"
                 android:textColor="@color/textWhite"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:layout_marginStart="6dp"
+                android:ellipsize="end"
+                android:singleLine="true" />
         </LinearLayout>
 
+        <!-- Partidas Ganadas -->
         <TextView
             android:id="@+id/tvPuntos"
             android:layout_width="0dp"
@@ -62,6 +67,7 @@
             android:layout_weight="1"
             android:gravity="center" />
 
+        <!-- Partidas Perdidas -->
         <TextView
             android:id="@+id/tvBonus"
             android:layout_width="0dp"
@@ -73,6 +79,7 @@
             android:layout_weight="1"
             android:gravity="center" />
 
+        <!-- Puntuación Total -->
         <TextView
             android:id="@+id/tvTotal"
             android:layout_width="0dp"
