--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -46,9 +46,10 @@
                         app:tint="@color/textWhite"/>
 
                     <TextView
-                        android:id="@+id/txtPuntos"
+                        android:id="@+id/txtPuntosTotales"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:text="10"
                         android:textColor="@android:color/white"
                         android:layout_marginStart="8dp"
                         android:autoSizeTextType="uniform"
@@ -120,8 +121,7 @@
                             android:textSize="20sp"
                             android:textStyle="bold"
                             android:textColor="@color/textWhite"
-                            android:gravity="center"
-                            android:layout_width="80dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
 
 
@@ -137,6 +137,7 @@
                         android:padding="8dp">
 
                         <TextView
+
                             android:text="Partidas Perdidas"
                             android:textSize="10sp"
                             android:textColor="@color/textWhite"
@@ -145,9 +146,9 @@
 
                         <TextView
                             android:id="@+id/txtPartidasPerdidas"
-                            android:gravity="center"
-                            android:layout_width="80dp"
+                            android:layout_width="18dp"
                             android:layout_height="wrap_content"
+                            android:text="10"
                             android:textColor="@color/textWhite"
                             android:textSize="20sp"
                             android:textStyle="bold" />
@@ -173,12 +174,12 @@
                             android:layout_height="wrap_content" />
 
                         <TextView
+                            android:text="10"
                             android:id="@+id/txtHorasJugadas"
                             android:textSize="20sp"
                             android:textStyle="bold"
                             android:textColor="@color/textWhite"
-                            android:gravity="center"
-                            android:layout_width="80dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
 
 
