--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -28,29 +28,28 @@
                     android:id="@+id/pointsContainer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/bg_uno"
                     android:orientation="horizontal"
                     android:padding="8dp"
-                    android:background="@drawable/bg_uno"
                     android:gravity="center_vertical"
                     android:layout_alignParentStart="true">
 
                     <ImageView
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
+                        android:layout_width="16dp"
+                        android:layout_height="16dp"
                         android:src="@drawable/ic_star"
-                        android:contentDescription="Puntos"
                         app:tint="@color/textWhite"/>
 
                     <TextView
-                        android:id="@+id/txtPuntos"
+                        android:id="@+id/txtPoints"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:text="10"
                         android:textColor="@android:color/white"
-                        android:layout_marginStart="8dp"
-                        android:autoSizeTextType="uniform"
-                        android:autoSizeMinTextSize="12sp"
-                        android:autoSizeMaxTextSize="16sp"/>
+                        android:layout_marginStart="4dp"
+                        android:textSize="14sp"/>
                 </LinearLayout>
+
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btnCerrarSesion"
                     android:layout_width="48dp"
